# predoc_ai

./: .gitignore  LICENSE  README.md  read.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  auth.py  config.py  main.py
backend/app/agents/: diagnosis_validator.py  generator_node.py  inquiry_node.py  intention_agent.py  memory_agent.py  message_queue.py  options_node.py  rag_retriever.py  reflection_node.py  rules_engine.py  state.py  symptom_rag_agent.py
backend/app/api/: auth_routes.py  routes.py  websocket.py
backend/app/graph/: consultation_graph.py
backend/app/knowledge_base/: chunker.py  loader.py  vector_store.py
backend/app/models/: schema.py
backend/app/prompts/: inquiry_prompt.py  reflection_prompt.py
backend/scripts/: build_vector_store.py
backend/tests/: test_context_compaction.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: CaseOutput.tsx  ChatWindow.tsx  ConfirmationQuestions.tsx  MessageBubble.tsx  TenInquiryOptions.tsx  ThinkingIndicator.tsx
frontend/src/hooks/: useChatStream.ts
frontend/src/services/: api.ts
frontend/src/styles/: index.css
